<resources>
    <!-- Titles -->
    <string name="app_name">Gainz Assist</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_exercises_entry">Exercise %d</string>
    <string name="title_new_workout_summary">New Workout Summary</string>
    <string name="no_workouts_to_resume">No workouts to resume</string>

    <!-- Content Descriptions -->
    <string name="cd_login_img">Main image in the login screen</string>
    <string name="cd_play_video_btn">Play button for YouTube video</string>
    <string name="cd_sign_up_img">Main image in the sign up screen</string>
    <string name="cd_facebook_login">Facebook Login</string>
    <string name="cd_google_login">Google Login</string>
    <string name="video_thumbnail">YouTube Video Thumbnail</string>


    <!-- Menu Items -->
    <string name="act_settings">Settings</string>
    <!--TODO remove-->
    <string name="how_to_videos">How To Videos</string>

    <!-- Error Msgs -->
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_invalid_password">Invalid Password</string>
    <string name="err_msg">Error: %s</string>
    <string name="err_required">Required</string>
    <string name="err_required_email_format">Email Format Required</string>
    <string name="err_required_password_min">Minimum 6 Characters Required</string>
    <string name="err_exercise_exists">%s exists</string>

    <!-- Success Msgs -->
    <string name="sign_up_success">Sign Up Success!</string>

    <!-- EditText Hints -->
    <string name="hint_email">
		<i>Email</i>
	</string>
    <string name="hint_password">
		<i>Password</i>
	</string>
    <string name="hint_search_workouts">
		<i>Search Workouts</i>
	</string>
    <string name="hint_search_exercise_vids">
		<i>Search Youtube</i>
	</string>
    <string name="hint_workout_name">
		<i>Workout Name</i>
	</string>
    <string name="hint_exercise_name">
		<i>Exercise Name</i>
	</string>
    <string name="hint_exercises">
		<i>Exercises</i>
	</string>
    <string name="hint_lbs">
		<i>lbs</i>
	</string>
    <string name="hint_reps">
		<i>Reps</i>
	</string>
    <string name="hint_sets">
		<i>Sets</i>
	</string>

    <!-- Phrases -->
    <string name="txt_no_account"><b>Don\'t have an account?\</b></string>
    <string name="txt_sign_up_here"><b>Sign up here!</b></string>
    <string name="txt_yes_account"><b>Already have an account?\</b></string>
    <string name="txt_login_here"><b>Login here!</b></string>
    <string name="txt_email_registered">Email is already registered</string>
    <string name="txt_network_needed">Internet connection required</string>
    <string name="txt_logged_in">Logged in with %s</string>

    <!-- General -->
    <string name="exercises">Exercises</string>
    <string name="login">Login</string>
    <string name="resume_workout">Resume Workout</string>
    <string name="sign_up">Sign Up</string>
    <string name="step_counter">Step Counter</string>
    <string name="warmups">Warmups</string>
    <string name="workout">Workout</string>
    <string name="workouts">Workouts</string>
    <string name="num_sets"># of Sets</string>
    <string name="num_reps"># of Reps</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_workout">Add Workout</string>
    <string name="create_workout">Create Workout</string>
    <string name="add_exercise">Add Exercise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="discard">Discard</string>
    <string name="initial_num_sets">3</string>
    <string name="initial_num_reps">10</string>
    <string name="initial_weight">45.0</string>
    <string name="reps">Reps</string>
    <string name="barbell">barbell</string>
    <string name="cancel_set">Cancel Set</string>
    <string name="finish_set">Finish Set</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="how_to">How To</string>
    <string name="start_next_set">Start Next Set</string>
    <string name="no_rest_needed">No Rest Needed</string>
    <string name="do_later">do later</string>
    <string name="enter">enter</string>
    <string name="cancel">cancel</string>
    <string name="skip">skip</string>
    <string name="num_of_exercises"># of exercises</string>
    <string name="initial_num_exercises">3</string>
    <string name="starting_reps">10</string>
    <string name="starting_sets">3</string>
    <string name="starting_weight">45.0</string>
    <string name="update_exercise">Update Exercise</string>
    <string name="update_workout">Update Workout</string>
    <string name="file_user_info">user_info.file</string>
    <string name="file_workout_info">workout_info.file</string>
    <string name="file_settings_info">settings_info.file</string>
    <string name="equipment">Equipment</string>
    <string name="update">update</string>
    <string name="home">Home</string>
    <string name="resume">Resume</string>
    <string name="workout_list">Workout List</string>
    <string name="incomplete_workouts">Incomplete Workouts</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="lbs">lbs</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_num">Exercise # </string>
    <string name="set_num">Set # </string>
    <string name="update_set">Update Set</string>

    <!-- Settings MVP -->
    <string name="settings_account">Account</string>
    <string name="settings_signed_in_as">Signed in as: %s</string>
    <string name="settings_email_unavailable">Email unavailable</string>
    <string name="settings_sign_out">Sign out</string>

    <string name="settings_privacy_support">Privacy &amp; Support</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_account_deletion">Account Deletion</string>
    <string name="settings_contact_support">Contact Support</string>

    <string name="settings_about">About</string>
    <string name="settings_version">Version %1$s (%2$d)</string>
    <string name="settings_app_description">GainzAssist helps track workouts and workout sessions.</string>

    <string name="privacy_policy_url">https://gainzassist-189306.web.app/privacy.html</string>
    <string name="account_deletion_url">https://gainzassist-189306.web.app/account-deletion.html</string>
    <string name="support_url">https://gainzassist-189306.web.app/support.html</string>
    <string name="support_email">gainzassist.support@gmail.com</string>
    <string name="data_deletion_email_subject">GainzAssist Account Deletion Request</string>
    <string name="support_email_subject">GainzAssist Support Request</string>
    <string name="no_warmups">No warmups.</string>
</resources>
