<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/ll_sm_weight"
        android:background="@color/colorLightBg"
        android:gravity="center_vertical"
        android:textColor="@color/colorBg"
        android:textSize="15sp"
        android:text="@string/set_num"/>

    <TextView
        android:id="@+id/tv_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/ll_sm_weight"
        android:gravity="center_vertical"
        android:textColor="@color/colorBg"
        android:textSize="15sp"
        android:text="@string/reps"/>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/ll_sm_weight"
        android:gravity="center_vertical"
        android:textColor="@color/colorBg"
        android:textSize="15sp"
        android:text="@string/weight_lbs"/>
</LinearLayout>