<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_finish_set"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:text="@string/finish_set"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_center_footer"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_update_set"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/tv_center_footer"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:text="@string/update_set"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_resume_workout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/tv_center_footer"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:gravity="center"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:text="@string/resume_workout"
        android:textSize="20sp"
        android:visibility="invisible"/>
</RelativeLayout>
