<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.Main">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/part_title_bar"/>

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/msvWorkouts"
            android:theme="@style/MaterialSearchViewStyle"
            android:hint="@string/hint_search_workouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_fmt_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/appbar"
        android:layout_below="@id/toolbar_container"/>

    <!-- Naviagtion Tabs -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBg"
        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlay_navbar"
            android:layout_width="match_parent"
            app:tabPadding="2dp"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="2dp"
            app:tabTextColor="@color/colorLightBg">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBg"
                android:text="@string/resume"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_workouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workouts" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>
