<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.start_workout.StartWorkoutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/part_title_bar"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_fmt_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/appbar"
        android:layout_below="@id/toolbar"/>

    <!-- Naviagtion Tabs -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBg"
        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlay_navbar"
            android:layout_width="match_parent"
            app:tabPadding="2dp"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="2dp"
            app:tabTextColor="@color/colorLightBg">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_warmups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_warmups"
                android:text="@string/warmups" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBg"
                android:icon="@drawable/ic_workout"
                android:text="@string/workout"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_exercises"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_exercises"
                android:text="@string/exercises" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>
