<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context=".activities.add_workout.WorkoutEntry">

    <include
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/part_title_bar" />

    <!-- ExerciseConst Name EditText -->
    <!--========================================================================================-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/ll_sm_weight"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:elevation="3dp"
        android:translationZ="1dp">

        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            layout="@layout/part_edit_text_workout" />
    </RelativeLayout>
    <!--ExerciseConst=Name============================================================================-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/ll_sm_weight"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:elevation="3dp"
        android:translationZ="1dp">

        <me.grantland.widget.AutofitLayout
            android:id="@+id/afl_num_exercises"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="2dp">

            <EditText
                android:id="@+id/et_num_exercises"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="4"
                android:hint="@string/num_sets"
                android:inputType="number"
                android:maxLength="3"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/starting_sets"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:ignore="Autofill"/>
        </me.grantland.widget.AutofitLayout>

        <ImageButton
            android:id="@+id/ibtn_dec_exercises"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/afl_num_exercises"
            android:layout_alignTop="@id/afl_num_exercises"
            android:layout_alignBottom="@id/afl_num_exercises"
            android:layout_margin="10dp"
            android:src="@drawable/selector_minus_btn"/>

        <ImageButton
            android:id="@+id/ibtn_inc_exercises"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/afl_num_exercises"
            android:layout_alignTop="@id/afl_num_exercises"
            android:layout_alignBottom="@id/afl_num_exercises"
            android:src="@drawable/selector_plus_btn"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/ll_sm_weight"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp">

        <TextView
            android:id="@+id/tv_center_footer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_center_footer"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/tv_center_footer"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20sp"/>
    </RelativeLayout>
</LinearLayout>